Fix spacing above headings

--- a/web/packages/app/src/App.css
+++ b/web/packages/app/src/App.css
@@ -30,6 +30,14 @@
   padding-right: 2rem;
 }
 
+.App h2 {
+  margin-top: 1rem;
+}
+
+.App h3 {
+  margin-top: 0.5rem;
+}
+
 h1 {
   text-align: center;
   background-color: #dddddd;
